--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
 			},
 			{
 				"command": "edgerDevices.installApp",
-				"title": "Install"
+				"title": "Deploy"
 			},
 			{
 				"command": "edgerDevices.openConsole",
