--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/class-name-casing": "warn",
+        "@typescript-eslint/class-name-casing": 1,
         "@typescript-eslint/semi": "warn",
         "curly": "warn",
         "eqeqeq": "warn",
