--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
 		},
 		"commands": [
 			{
+				"command": "mobile.preview",
+				"title": "%extension.commands.preview%"
+			},
+			{
 				"command": "edgerDevices.refreshDevice",
 				"title": "%extension.commands.refresh%",
 				"icon": {
@@ -84,6 +88,11 @@
 				}
 			],
 			"view/item/context": [
+				{
+					"command": "mobile.preview",
+					"when": "view == edgerDeviceView && viewItem == edger",
+					"group": "inline"
+				},
 				{
 					"command": "edgerDevices.installApp",
 					"when": "view == edgerDeviceView && viewItem == edger",
