--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"version": "0.0.8",
 	"publisher": "edgeros",
 	"repository": "https://github.com/edgeros/vsce.git",
-	"icon": "media/icon.png",
+	"icon": "./media/icon.png",
 	"engines": {
 		"vscode": "^1.44.0"
 	},
@@ -20,6 +20,106 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"configuration": {
+			"title": "EdgerOS",
+			"properties": {
+				"edgeros.template.originUsing": {
+					"type": "string",
+					"scope": "window",
+					"default": "github",
+					"description": "Template origin."
+				},
+				"edgeros.template.list": {
+					"type": "array",
+					"scope": "window",
+					"default": [
+						{
+							"type": [
+								"base"
+							],
+							"displayName": "Empty template",
+							"name": "empty",
+							"discription": "Empty temp late Empty templateEmptytemplate Empty template Empty template",
+							"icon": "http://docs.edgeros.com/edgeros/api/assets/logo.png",
+							"origin": [
+								{
+									"name": "zoho",
+									"url": "httttttt"
+								},
+								{
+									"name": "github",
+									"url": "https://codeload.github.com/edgeros/tpl-blank/zip/main"
+								}
+							]
+						}
+					],
+					"items": {
+						"anyOf": [
+							{
+								"type": "object",
+								"properties": {
+									"type": {
+										"type": "array",
+										"description": "Template type.",
+										"items": {
+											"type": "string"
+										}
+									},
+									"name": {
+										"type": "string",
+										"description": "Template name."
+									},
+									"displayName": {
+										"type": "string",
+										"description": "Template display name."
+									},
+									"icon": {
+										"type": "string",
+										"description": "Template icon."
+									},
+									"description": {
+										"type": "string",
+										"description": "Template description."
+									},
+									"origin": {
+										"type": "array",
+										"scope": "window",
+										"items": {
+											"anyOf": [
+												{
+													"name": {
+														"type": "string",
+														"description": "origin name."
+													},
+													"url": {
+														"type": "string",
+														"description": "download url."
+													}
+												}
+											]
+										}
+									}
+								},
+								"required": [
+									"type",
+									"name",
+									"displayName",
+									"icon",
+									"origin"
+								]
+							}
+						]
+					},
+					"description": "Template download URL."
+				},
+				"edgeros.template.update": {
+					"type": "string",
+					"scope": "window",
+					"default": "https://codeload.github.com/edgeros/tpl-blank/zip/main",
+					"description": "Templates update URL."
+				}
+			}
+		},
 		"languages": [
 			{
 				"id": "Log",
@@ -56,8 +156,24 @@
 		},
 		"commands": [
 			{
+				"command": "edgeros.openSettingsUI",
+				"title": "%extension.commands.openSettings%"
+			},
+			{
+				"command": "edgeros.openSettings",
+				"title": "%extension.commands.openSettings%"
+			},
+			{
 				"command": "mobile.preview",
 				"title": "%extension.commands.preview%"
+			},
+			{
+				"command": "edgeros.propmtNewProject",
+				"title": "%extension.commands.new%"
+			},
+			{
+				"command": "edgeros.newProject",
+				"title": "%extension.commands.new%"
 			},
 			{
 				"command": "edgerDevices.refreshDevice",
@@ -108,6 +224,10 @@
 					"when": "view == edgerDeviceView"
 				},
 				{
+					"command": "edgeros.openSettingsUI",
+					"when": "view == edgerDeviceView"
+				},
+				{
 					"command": "edgerDevices.archive",
 					"when": "view == edgerDeviceView",
 					"group": "navigation"
@@ -145,11 +265,10 @@
 			{
 				"view": "edgerDeviceView",
 				"contents": "%extension.contents% [%extension.contents.linkTitle%](https://www.extension.com/)."
-		
 			},
 			{
 				"view": "edgerDeviceView",
-				"contents": "[%extension.contents.addDevice%](command:edgerDevices.addDevice)"
+				"contents": "[%extension.contents.add%](command:edgerDevices.addDevice)"
 			}
 		]
 	},
