--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"displayName": "%extension.displayName%",
 	"description": "%extension.description%",
 	"enableProposedApi": false,
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"publisher": "EdgerOS",
 	"repository": "https://github.com/edgeros/vsce.git",
 	"icon": "media/icon.png",
 	"engines": {
-		"vscode": "^1.44.0"
+		"vscode": "^1.55.0"
 	},
 	"categories": [
 		"Language Packs",
@@ -224,7 +224,11 @@
 			},
 			{
 				"command": "edgerDevices.openConsole",
-				"title": "%extension.commands.console%"
+				"title": "%extension.commands.console%",
+				"icon": {
+					"light": "resources/light/console.svg",
+					"dark": "resources/dark/console.svg"
+				}
 			}
 		],
 		"menus": {
@@ -251,6 +255,11 @@
 			"view/item/context": [
 				{
 					"command": "edgerDevices.installApp",
+					"when": "view == edgerDeviceView && viewItem == edger",
+					"group": "inline"
+				},
+				{
+					"command": "edgerDevices.openConsole",
 					"when": "view == edgerDeviceView && viewItem == edger",
 					"group": "inline"
 				},
@@ -298,7 +307,7 @@
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.13.9",
-		"@types/vscode": "^1.44.0",
+		"@types/vscode": "^1.55.0",
 		"@typescript-eslint/eslint-plugin": "^2.34.0",
 		"@typescript-eslint/parser": "^2.34.0",
 		"eslint": "^6.8.0",
