--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
 					"name": "EdgerOS"
 				}
 			]
-		}
+		},
+		"viewsWelcome": [
+			{
+				"view": "eosManageView",
+				"contents": "此项目并非Edgeros Project.\n[访问官网](http://www.egeros.com)\n[创建项目](command:edgeros.helloWorld)"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
