--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:edgeros.helloWorld",
+		"onCommand:edgeros.helloEdgerOS",
 		"onView:eosManageView"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "edgeros.helloWorld",
-				"title": "Hello World"
+				"command": "edgeros.helloEdgerOS",
+				"title": "Hello EdgerOS"
 			},
 			{
 				"command": "edgeros.showAddDevView",
@@ -29,7 +29,7 @@
 				}
 			},
 			{
-				"command": "edgeros.showCreateProject",
+				"command": "edgeros.showCreateProView",
 				"title": "Create EdgerOS Project",
 				"icon": {
 					"light": "resources/icon/light/command_createProject.svg",
@@ -53,7 +53,7 @@
 					"group": "navigation"
 				},
 				{
-					"command": "edgeros.showCreateProject",
+					"command": "edgeros.showCreateProView",
 					"when": "view == eosManageView",
 					"group": "navigation"
 				}
@@ -75,13 +75,15 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.46.0",
+		"@types/ejs": "^3.0.6",
+		"@types/fs-extra": "^9.0.11",
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
-		"eslint": "^7.15.0",
+		"@types/vscode": "^1.46.0",
 		"@typescript-eslint/eslint-plugin": "^4.9.0",
 		"@typescript-eslint/parser": "^4.9.0",
+		"eslint": "^7.15.0",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"typescript": "^4.1.2",
@@ -89,6 +91,8 @@
 	},
 	"dependencies": {
 		"@types/requireindex": "^1.2.0",
+		"ejs": "^3.1.6",
+		"fs-extra": "^9.1.0",
 		"requireindex": "^1.2.0"
 	}
 }
