--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
         "semi": "off"
-    }
+    },
+    "eslintIgnore": [
+        "edger_cli"
+    ]
 }
