--- a/package.json
+++ b/package.json
@@ -134,6 +134,8 @@
 	},
 	"dependencies": {
 		"@types/requireindex": "^1.2.0",
+		"axios": "^0.21.1",
+		"compressing": "^1.5.1",
 		"ejs": "^3.1.6",
 		"fs-extra": "^9.1.0",
 		"requireindex": "^1.2.0"
