--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
 		"form-data": "^4.0.0",
 		"fs-extra": "^9.1.0",
 		"globby": "^11.0.3",
+		"moment": "^2.29.1",
 		"requireindex": "^1.2.0"
 	}
 }
