--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "@edgeros/vscode-edgeros",
+	"name": "edgeros",
 	"displayName": "EdgerOS VSCode Extension",
 	"description": "EdgerOS development extension for VSCode",
 	"version": "0.2.0",
 	"publisher": "EdgerOS",
 	"repository": "https://github.com/edgeros/vscode-edgeros.git",
-	"icon": "https://github.com/edgeros/vscode-edgeros/blob/master/resources/media/icon.png",
+	"icon": "resources/media/icon.png",
 	"engines": {
 		"vscode": "^1.55.0"
 	},
