--- a/templates/simple_tpl/.eslintrc.json
+++ b/templates/simple_tpl/.eslintrc.json
@@ -5,9 +5,7 @@
       "es2021": true,
       "@edgeros/jsre/jsre": true
   },
-  "extends": [
-      "standard"
-  ],
+  "extends": [],
   "parserOptions": {
       "ecmaVersion": 12
   },
