--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 	"description": "EdgerOS development extension for VSCode",
 	"version": "0.2.8",
 	"publisher": "EdgerOS",
-	"repository": "https://github.com/edgeros/vscode-edgeros.git",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/edgeros/vscode-edgeros"
+	},
 	"icon": "resources/media/icon.png",
 	"engines": {
 		"vscode": "^1.55.0"
@@ -206,6 +209,7 @@
 		"@types/glob": "^7.1.3",
 		"@types/mocha": "^8.0.4",
 		"@types/node": "^12.11.7",
+		"@types/requireindex": "^1.2.0",
 		"@types/vscode": "^1.55.0",
 		"@typescript-eslint/eslint-plugin": "^4.9.0",
 		"@typescript-eslint/parser": "^4.9.0",
@@ -217,7 +221,6 @@
 		"vscode-test": "^1.4.1"
 	},
 	"dependencies": {
-		"@types/requireindex": "^1.2.0",
 		"axios": "^0.21.1",
 		"compressing": "^1.5.1",
 		"ejs": "^3.1.6",
