--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "edgeros",
 	"displayName": "EdgerOS VSCode Extension",
 	"description": "EdgerOS development extension for VSCode",
-	"version": "0.2.5",
+	"version": "0.2.6",
 	"publisher": "EdgerOS",
 	"repository": "https://github.com/edgeros/vscode-edgeros.git",
 	"icon": "resources/media/icon.png",
@@ -184,6 +184,7 @@
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"typescript": "^4.1.2",
+		"vsce": "^1.93.0",
 		"vscode-test": "^1.4.1"
 	},
 	"dependencies": {
